--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html{
 body{
     background-image: url(/assets/fundo-bg.jpg);
     background-size: cover;
+    background-position: center;
     font-family: 'Poppins', sans-serif;
     
 }
@@ -94,7 +95,7 @@ section h1{
 }
 
 img.lampada{
-    max-width: 250px;
+    max-width: 15rem;
     filter: drop-shadow(0 0 10px black);
     justify-self: center;
 }
@@ -105,7 +106,11 @@ footer{
     display: flex;
     position: absolute;
     justify-content: center;
-    bottom: 0;
+    bottom: 5%;
     width: 100%;
     color: white;
+}
+
+.lampada.acesa{
+    filter: drop-shadow(0 0 30px #e928f0) brightness(1.5);
 }
